# youtubed

./: README.md  pyproject.toml
downloader/: urls.py  views.py
downloader/templates/downloader/: index.html
templates/: base.html
theme/static_src/: package-lock.json  tailwind.config.js
youtubed/: asgi.py  settings.py  urls.py  wsgi.py
