[tool.poetry]
name = "youtubed"
version = "0.1.0"
description = ""
authors = ["Naffah Abdulla Rasheed <mail@naffah.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-tailwind = "^3.1.1"
pytube = "^12.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
